// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component Editor Node Node builds the expected component when not selected 1`] = `
<div
  className="oboeditor-component component  is-not-selected mock-extra-classname"
  data-obo-component="true"
>
  mock-children
</div>
`;

exports[`Component Editor Node Node builds the expected component when not selected null contentDescription 1`] = `
<div
  className="oboeditor-component component  is-selected mock-extra-classname"
  data-obo-component="true"
>
  <div
    className="component-toolbar"
  >
    MockInsertMenu
    MockInsertMenu
  </div>
  MockMoreInfoBox
  mock-children
</div>
`;

exports[`Component Editor Node Node builds the expected component when selected 1`] = `
<div
  className="oboeditor-component component  is-selected mock-extra-classname"
  data-obo-component="true"
>
  <div
    className="component-toolbar"
  >
    MockInsertMenu
    MockInsertMenu
  </div>
  MockMoreInfoBox
  mock-children
</div>
`;

exports[`Component Editor Node Node builds the expected component with no classname 1`] = `
<div
  className="oboeditor-component component  is-not-selected "
  data-obo-component="true"
>
  mock-children
</div>
`;
